--- a/base.html
+++ b/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta Name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="base.css">
@@ -22,71 +22,69 @@
     <div class="Base-App">
         <div class="SideBar-Container" id="SideBar-Container">
             <div class="SideBar">
-                <div class="sidebar-wrapper">
-                    <div class="Account">
-                        <div role="button" tabindex="0" class="sidebar-switcher">
-                            <div class="record">
-                                <div class="record-icon">
-                                    <div role="img" aria-label="a">
-                                        <div>a</div>
-                                    </div>
+                <div class="Account">
+                    <div role="button" tabindex="0" class="sidebar-switcher">
+                        <div class="Record">
+                            <div class="Record-Icon">
+                                <div role="img" aria-label="a">
+                                    <div>a</div>
                                 </div>
-                                <div class="record-name"><div>ace priority</div></div>
                             </div>
+                            <div class="Record-Name"><div>ace priority</div></div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="SideBar-Links">
-                        <div role="button" tabindex="0" class="s-links">
-                            <a href="#" class="SideBar-Link">
-                                <div class="SideBar-Link-Icon">
-                                    <div role="img">
-                                        <span class="material-symbols-outlined">home</span>
-                                    </div>
+                <div class="App-Switcher-Container">
+                    <div role="button" tabindex="0" data-hint="Home">
+                        <a href="#" class="Switch-Link">
+                            <div class="Link-Icon">
+                                <div role="img">
+                                    <span class="material-symbols-outlined">home</span>
                                 </div>
-                                <div class="sidebar-link-name"><div>Home</div></div>
-                            </a>
-                        </div>
-                        <div role="button" tabindex="0" class="s-links">
-                            <a href="#" class="SideBar-Link">
-                                <div class="SideBar-Link-Icon">
-                                    <div role="img">
-                                        <span class="material-symbols-outlined">speed</span>
-                                    </div>
+                            </div>
+                            <div class="Link-Name"><div>Home</div></div>
+                        </a>
+                    </div>
+                    <div role="button" tabindex="0" data-hint="Dashboard">
+                        <a href="#" class="Switch-Link">
+                            <div class="Link-Icon">
+                                <div role="img">
+                                    <span class="material-symbols-outlined">speed</span>
                                 </div>
-                                <div class="sidebar-link-name"><div>Dashboard</div></div>
-                            </a>
-                        </div>
-                        <div role="button" tabindex="0" class="s-links">
-                            <a href="#" class="SideBar-Link">
-                                <div class="SideBar-Link-Icon">
-                                    <div role="img">
-                                        <span class="material-symbols-outlined">inventory_2</span>
-                                    </div>
+                            </div>
+                            <div class="Link-Name"><div>Dashboard</div></div>
+                        </a>
+                    </div>
+                    <div role="button" tabindex="0" data-hint="Inventory">
+                        <a href="#" class="Switch-Link">
+                            <div class="Link-Icon">
+                                <div role="img">
+                                    <span class="material-symbols-outlined">inventory_2</span>
                                 </div>
-                                <div class="sidebar-link-name"><div>Inventory</div></div>
-                            </a>
-                        </div>
-                        <div role="button" tabindex="0" class="s-links">
-                            <a href="#" class="SideBar-Link">
-                                <div class="SideBar-Link-Icon">
-                                    <div role="img">
-                                        <span class="material-symbols-outlined">shopping_cart</span>
-                                    </div>
+                            </div>
+                            <div class="Link-Name"><div>Inventory</div></div>
+                        </a>
+                    </div>
+                    <div role="button" tabindex="0" data-hint="Orders">
+                        <a href="#" class="Switch-Link">
+                            <div class="Link-Icon">
+                                <div role="img">
+                                    <span class="material-symbols-outlined">shopping_cart</span>
                                 </div>
-                                <div class="sidebar-link-name"><div>Orders</div></div>
-                            </a>
-                        </div>
-                        <div role="button" tabindex="0" class="s-links">
-                            <a href="#" class="SideBar-Link">
-                                <div class="SideBar-Link-Icon">
-                                    <div role="img">
-                                        <span class="material-symbols-outlined">settings</span>
-                                    </div>
+                            </div>
+                            <div class="Link-Name"><div>Orders</div></div>
+                        </a>
+                    </div>
+                    <div role="button" tabindex="0" data-hint="Settings">
+                        <a href="#" class="Switch-Link">
+                            <div class="Link-Icon">
+                                <div role="img">
+                                    <span class="material-symbols-outlined">settings</span>
                                 </div>
-                                <div class="sidebar-link-name"><div>Settings</div></div>
-                            </a>
-                        </div>
+                            </div>
+                            <div class="Link-Name"><div>Settings</div></div>
+                        </a>
                     </div>
                 </div>
             </div>
