--- a/base.html
+++ b/base.html
@@ -23,7 +23,7 @@
         <div class="SideBar-Container" id="SideBar-Container">
             <div class="SideBar">
                 <div class="Account">
-                    <div role="button" tabindex="0" class="sidebar-switcher">
+                    <div role="button" tabindex="0">
                         <div class="Record">
                             <div class="Record-Icon">
                                 <div role="img" aria-label="a">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="App-Switcher-Container">
-                    <div role="button" tabindex="0" data-hint="Home">
+                    <div role="button" tabindex="0" data-hint="Home"  class="SideBar-Switcher">
                         <a href="#" class="Switch-Link">
                             <div class="Link-Icon">
                                 <div role="img">
@@ -46,7 +46,7 @@
                             <div class="Link-Name"><div>Home</div></div>
                         </a>
                     </div>
-                    <div role="button" tabindex="0" data-hint="Dashboard">
+                    <div role="button" tabindex="0" data-hint="Dashboard" class="SideBar-Switcher">
                         <a href="#" class="Switch-Link">
                             <div class="Link-Icon">
                                 <div role="img">
@@ -56,7 +56,7 @@
                             <div class="Link-Name"><div>Dashboard</div></div>
                         </a>
                     </div>
-                    <div role="button" tabindex="0" data-hint="Inventory">
+                    <div role="button" tabindex="0" data-hint="Inventory" class="SideBar-Switcher">
                         <a href="#" class="Switch-Link">
                             <div class="Link-Icon">
                                 <div role="img">
@@ -66,7 +66,7 @@
                             <div class="Link-Name"><div>Inventory</div></div>
                         </a>
                     </div>
-                    <div role="button" tabindex="0" data-hint="Orders">
+                    <div role="button" tabindex="0" data-hint="Orders" class="SideBar-Switcher">
                         <a href="#" class="Switch-Link">
                             <div class="Link-Icon">
                                 <div role="img">
@@ -76,7 +76,7 @@
                             <div class="Link-Name"><div>Orders</div></div>
                         </a>
                     </div>
-                    <div role="button" tabindex="0" data-hint="Settings">
+                    <div role="button" tabindex="0" data-hint="Settings" class="SideBar-Switcher">
                         <a href="#" class="Switch-Link">
                             <div class="Link-Icon">
                                 <div role="img">
